--- a/Backend/get_class_data.ipynb
+++ b/Backend/get_class_data.ipynb
@@ -2,19 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import "
+    "import requests"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. "
+    "1. Get class data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request failed with status code: 404\n"
+     ]
+    }
+   ],
+   "source": [
+    "# course_name = \"CIS-121\"\n",
+    "# api_endpoint = f\"v1/courses/{course_name}/reviews\"\n",
+    "# token = \"public\"\n",
+    "\n",
+    "# base_url = \"http://api.penncoursereview.com/\"\n",
+    "# query_url = f\"{base_url}{api_endpoint}?token={token}\"\n",
+    "\n",
+    "\n",
+    "response = requests.get(\"http://api.penncoursereview.com/v1/courses/ACCT-1020?token=public\")\n",
+    "\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "    print(data)\n",
+    "else:\n",
+    "    print(f\"Request failed with status code: {response.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -24,7 +70,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
   "orig_nbformat": 4
