update generate embeddings notebook

--- a/Backend/generate_embeddings.ipynb
+++ b/Backend/generate_embeddings.ipynb
@@ -18,7 +18,8 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from transformers import BertTokenizer, BertModel\n",
-    "import torch"
+    "import torch\n",
+    "import json"
    ]
   },
   {
@@ -114,7 +115,12 @@
     "with torch.no_grad():\n",
     "    outputs = model(**inputs)\n",
     "\n",
-    "embeddings = outputs.last_hidden_state[:, 0, :]"
+    "embeddings = outputs.last_hidden_state[:, 0, :]\n",
+    "\n",
+    "# Save the embeddings\n",
+    "mapping = dict(zip(courses, embeddings.tolist()))\n",
+    "with open('mapping.json', 'w') as f:\n",
+    "    json.dump(mapping, f)"
    ]
   },
   {
