All classes embeddings

--- a/Backend/generate_embeddings.ipynb
+++ b/Backend/generate_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,45 +39,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[75], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m         description \u001b[39m=\u001b[39m p_tags[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mtext\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[1;32m     19\u001b[0m         courses\u001b[39m.\u001b[39mappend(course_number \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m course_name)\n\u001b[0;32m---> 20\u001b[0m         course_info\u001b[39m.\u001b[39;49mappend(course_number \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m course_name \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m. \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m description)\n\u001b[1;32m     22\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     23\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFailed to retrieve the page. Status code:\u001b[39m\u001b[39m\"\u001b[39m, response\u001b[39m.\u001b[39mstatus_code)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'append'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url = \"https://catalog.upenn.edu/courses/cis/\"\n",
+    "# Get all the class links\n",
+    "url = \"https://catalog.upenn.edu/courses/\"\n",
     "\n",
     "response = requests.get(url)\n",
-    "course_name_description = []\n",
-    "courses = []\n",
+    "header = \"https://catalog.upenn.edu\"\n",
+    "course_links = []\n",
     "\n",
     "if response.status_code == 200:\n",
-    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "    course_listings = soup.find_all('div', class_='courseblock')\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    course_div = soup.find_all('div', class_='az_sitemap')\n",
     "\n",
-    "    for course in course_listings:\n",
-    "        p_tags = course.find_all('p')\n",
-    "        \n",
+    "    course_uls = course_div[0].find_all('ul', class_=False)\n",
     "\n",
-    "        course_info = p_tags[0].text\n",
-    "        course_number = course_info.split('\\xa0')[0]\n",
-    "        course_name = course_info.split('  ')[1]\n",
-    "        description = p_tags[1].text.split('\\n')[0]\n",
-    "        courses.append(course_number + \" \" + course_name)\n",
-    "        course_name_description.append(course_number + \" \" + course_name + \". \" + description)\n",
-    "\n",
+    "    # Get and store all the course links\n",
+    "    for course_ul in course_uls:\n",
+    "        course_lis = course_ul.find_all('li', class_=False)\n",
+    "        for course_li in course_lis:\n",
+    "            a_elements = course_li.find_all('a')\n",
+    "            href_value = a_elements[0].get('href')\n",
+    "            course_links.append(header + href_value)\n",
     "else:\n",
-    "    print(\"Failed to retrieve the page. Status code:\", response.status_code)\n"
+    "    print(\"Failed to retrieve the page. Status code:\", response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_course_content(url):\n",
+    "    response = requests.get(url)\n",
+    "    course_name_description, course_name_numbers = [], []\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "        course_listings = soup.find_all('div', class_='courseblock')\n",
+    "\n",
+    "        for course in course_listings:\n",
+    "            p_tags = course.find_all('p')\n",
+    "            \n",
+    "            course_info = p_tags[0].text\n",
+    "            course_number = course_info.split('\\xa0')[0]\n",
+    "            course_name = course_info.split('  ')[1]\n",
+    "            description = p_tags[1].text.split('\\n')[0]\n",
+    "            course_name_numbers.append(course_number + \" \" + course_name)\n",
+    "            course_name_description.append(course_number + \" \" + course_name + \". \" + description)\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Failed to retrieve the page. Status code:\", response.status_code)\n",
+    "    return course_name_numbers, course_name_description\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_courses_name_numbers, all_courses_name_description = [], []\n",
+    "\n",
+    "for course_link in course_links:\n",
+    "    course_name_numbers, course_name_description = get_course_content(course_link)\n",
+    "\n",
+    "    all_courses_name_numbers.extend(course_name_numbers)\n",
+    "    all_courses_name_description.extend(course_name_description)"
    ]
   },
   {
@@ -109,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs = tokenizer(course_name_description, return_tensors='pt', padding=True, truncation=True)\n",
+    "inputs = tokenizer(all_courses_name_description, return_tensors='pt', padding=True, truncation=True)\n",
     "\n",
     "# Forward pass through the model to get embeddings\n",
     "with torch.no_grad():\n",
@@ -118,7 +149,7 @@
     "embeddings = outputs.last_hidden_state[:, 0, :]\n",
     "\n",
     "# Save the embeddings\n",
-    "mapping = dict(zip(courses, embeddings.tolist()))\n",
+    "mapping = dict(zip(all_courses_name_numbers, embeddings.tolist()))\n",
     "with open('mapping.json', 'w') as f:\n",
     "    json.dump(mapping, f)"
    ]
@@ -913,7 +944,7 @@
    "source": [
     "for i, embedding in enumerate(embeddings):\n",
     "    print(f\"Embeddings for sentence {i+1}:\")\n",
-    "    print(embedding)\n"
+    "    print(embedding)"
    ]
   }
  ],
