--- a/Backend/get_class_data.ipynb
+++ b/Backend/get_class_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request failed with status code: 404\n"
+      "Request failed with status code: 403\n"
      ]
     }
    ],
@@ -37,8 +37,9 @@
     "# base_url = \"http://api.penncoursereview.com/\"\n",
     "# query_url = f\"{base_url}{api_endpoint}?token={token}\"\n",
     "\n",
+    "headers = { 'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36', }\n",
     "\n",
-    "response = requests.get(\"http://api.penncoursereview.com/v1/courses/ACCT-1020?token=public\")\n",
+    "response = requests.get(\"https://penncoursereview.com/api/review/course/CIS-121?format=json&token=platform\", headers=headers)\n",
     "\n",
     "\n",
     "if response.status_code == 200:\n",
