--- a/Backend/get_class_data.ipynb
+++ b/Backend/get_class_data.ipynb
@@ -148,19 +148,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for course_number in all_course_numbers:\n",
-    "    print(course_number)\n",
-    "    response = requests.get(f'https://penncoursereview.com/api/review/course/{course_number}?format=json&token=platform', cookies=cookies, headers=headers)\n",
+    "# for course_number in all_course_numbers:\n",
+    "#     print(course_number)\n",
+    "#     response = requests.get(f'https://penncoursereview.com/api/review/course/{course_number}?format=json&token=platform', cookies=cookies, headers=headers)\n",
     "\n",
-    "    if response.status_code == 200:\n",
-    "        data = json.loads(response.text)\n",
+    "#     if response.status_code == 200:\n",
+    "#         data = json.loads(response.text)\n",
     "\n",
-    "        # Find the best instructor\n",
-    "        info_arr = extract_info(data)\n",
-    "    else:\n",
-    "        continue\n",
-    "    print(response.status_code)\n",
-    "    print(response.text)"
+    "#         # Find the best instructor\n",
+    "#         info_arr = extract_info(data)\n",
+    "#     else:\n",
+    "#         continue\n",
+    "#     print(response.status_code)\n",
+    "#     print(response.text)"
    ]
   },
   {
@@ -169,37 +169,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(f'https://penncoursereview.com/api/review/course/AFRC-1780?format=json&token=platform', cookies=cookies, headers=headers)\n",
-    "data = json.loads(response.text)\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cookies = {\n",
-    "    'csrftoken': '7uoFMfLL1lLpZ9raoHvGJ1BrzWE8udxhLANeRSfEMa4XasPTt5Y3MNBd3vyX9nXH',\n",
-    "    'sessionid': '23ivwpc2mtrobpkjy4tdzjsr49wq5mqw',\n",
-    "}\n",
-    "\n",
-    "headers = {\n",
-    "    'authority': 'penncoursereview.com',\n",
-    "    'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8',\n",
-    "    'accept-language': 'en-US,en;q=0.9',\n",
-    "    'sec-ch-ua': '\"Chromium\";v=\"116\", \"Not)A;Brand\";v=\"24\", \"Brave\";v=\"116\"',\n",
-    "    'sec-ch-ua-mobile': '?0',\n",
-    "    'sec-ch-ua-platform': '\"macOS\"',\n",
-    "    'sec-fetch-dest': 'document',\n",
-    "    'sec-fetch-mode': 'navigate',\n",
-    "    'sec-fetch-site': 'cross-site',\n",
-    "    'sec-fetch-user': '?1',\n",
-    "    'sec-gpc': '1',\n",
-    "    'upgrade-insecure-requests': '1',\n",
-    "    'user-agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/116.0.0.0 Safari/537.36',\n",
-    "}"
+    "# response = requests.get(f'https://penncoursereview.com/api/review/course/AFRC-1780?format=json&token=platform', cookies=cookies, headers=headers)\n",
+    "# data = json.loads(response.text)\n",
+    "# print(data)"
    ]
   },
   {
@@ -247,7 +219,7 @@
    ],
    "source": [
     "course_review = {}\n",
-    "timeout_seconds = 3\n",
+    "timeout_seconds = 1\n",
     "\n",
     "for course_number in all_course_numbers:\n",
     "    try:\n",
