--- a/Database/majors.ipynb
+++ b/Database/majors.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json \n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from populate import *"
    ]
   },
   {
@@ -90,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://catalog.upenn.edu/undergraduate/engineering-applied-science/majors/\"\n",
+    "url = \"https://catalog.upenn.edu/undergraduate/engineering-applied-science/minors/\"\n",
     "\n",
     "\n",
     "response = requests.get(url)\n",
@@ -120,41 +121,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://catalog.upenn.edu/undergraduate/programs/bioengineering-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/biomedical-science-bas/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/chemical-biomolecular-engineering-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/computer-engineering-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/computer-science-bas/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/computer-science-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/digital-media-design-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/electrical-engineering-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/individualized-bas/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/materials-science-engineering-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/mechanical-engineering-applied-mechanics-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/networked-social-systems-engineering-bse/',\n",
-       " 'https://catalog.upenn.edu/undergraduate/programs/systems-science-engineering-bse/']"
+       "['https://catalog.upenn.edu/undergraduate/programs/engineering-entrepreneurship-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/meam-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/energy-sustainability-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/computer-science-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/digital-media-design-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/electrical-engineering-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/chemical-biomolecular-engineering-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/data-science-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/systems-science-engineering-minor/',\n",
+       " 'https://catalog.upenn.edu/undergraduate/programs/materials-science-engineering-minor/']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "majors_links = list(set(majors_links))\n",
     "majors_links"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinged your deployment. You successfully connected to MongoDB!\n",
+      "Engineering Entrepreneurship, Minor\n",
+      "Energy & Sustainability, Minor\n",
+      "Computer Science, Minor\n",
+      "Digital Media Design, Minor\n",
+      "Electrical Engineering, Minor\n",
+      "Systems Science and Engineering, Minor\n",
+      "Materials Science and Engineering, Minor\n"
+     ]
+    }
+   ],
+   "source": [
+    "db = setup()\n",
+    "for link in majors_links:\n",
+    "    reqs = []\n",
+    "    electives = {}\n",
+    "    response = requests.get(link)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    title = soup.find('h1', class_='page-title').text \n",
+    "    even = soup.find_all('tr', class_='even')\n",
+    "    odd = soup.find_all('tr', class_='odd')\n",
+    "    div = even + odd\n",
+    "    for d in div:\n",
+    "        if len(d['class']) == 1 and len(d.contents[0]) == 1 and d.contents[0].contents[0]['class'][0] == 'bubblelink':\n",
+    "            reqs.append(d.contents[0].text.replace('\\xa0', ' '))\n",
+    "\n",
+    "    courselistcomment = soup.find_all('span', class_='courselistcomment')\n",
+    "    for e in courselistcomment:\n",
+    "        if len(e['class']) == 1 and e.text[-1] != ':':\n",
+    "            if e.parent.parent.text[-1].isdigit():\n",
+    "                if electives.get(e.text) == None:\n",
+    "                    num = int(''.join(filter(str.isdigit, e.parent.parent.text.split(\" \")[-1])))\n",
+    "                    electives[e.text.replace('\\xa0', ' ')] = num\n",
+    "                else:\n",
+    "                    electives[e.text.replace('\\xa0', ' ')] += num\n",
+    "    if len(reqs) != 0:\n",
+    "        print(title)\n",
+    "        print(reqs)\n",
+    "        print(electives)\n",
+    "        #addMajor(Field(title, reqs, electives), db)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
